--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,1 +1,7 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>vue news</title><link rel=stylesheet href=http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css><link href=/static/css/app.203d1ff302293f873d410410f0788705.css rel=stylesheet></head><body><div class=container-fluid style="height: 100%"><div id=app></div></div><script type=text/javascript src=/static/js/manifest.3ec06724a1a801fc48bc.js></script><script type=text/javascript src=/static/js/vendor.118571e4ab1c842cf227.js></script><script type=text/javascript src=/static/js/app.56bcb3ca6430a26f9686.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>vue news</title><link rel=stylesheet href=http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css><script>var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?f3282cdbf1813c33c587e3807387d09b";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();</script><link href=/static/css/app.203d1ff302293f873d410410f0788705.css rel=stylesheet></head><body><div class=container-fluid style="height: 100%"><div id=app></div></div><script type=text/javascript src=/static/js/manifest.3ec06724a1a801fc48bc.js></script><script type=text/javascript src=/static/js/vendor.118571e4ab1c842cf227.js></script><script type=text/javascript src=/static/js/app.56bcb3ca6430a26f9686.js></script></body></html>
